# tree-sitter-kotlin

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  index.html  package-lock.json  package.json  playground.js  pyproject.toml  setup.py  styles.css  tree-sitter-parser.wasm  tree-sitter.js  tree-sitter.json
.github/: labeler.yml
.github/workflows/: build.yml  deploy-to-crates-io.yml  deploy-to-github.yml  deploy-to-npm.yml  deploy.yml  labeler.yml  regenerate-parser.yml
assets/tree-sitter-kotlin-0.3.1/: tree-sitter-kotlin.wasm
assets/tree-sitter-kotlin-0.3.4-dev/: tree-sitter-kotlin.wasm
assets/tree-sitter-kotlin-0.3.5/: tree-sitter-kotlin.wasm
assets/tree-sitter-kotlin-0.3.7/: tree-sitter-kotlin.wasm
assets/tree-sitter-kotlin-0.3.8/: tree-sitter-kotlin.wasm
assets/tree-sitter-playground-0.19.3/: playground.js
assets/web-tree-sitter-0.22.1/: tree-sitter.wasm
bindings/c/: tree-sitter-kotlin.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kotlin/: __init__.py  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/TreeSitterKotlinTests/: TreeSitterKotlinTests.swift
corpus/: classes.txt  comments.txt  expressions.txt  functions.txt  misc_return_statement.txt  source-files.txt  statements.txt  types.txt
examples/: Delegates.kt  Elvis.kt  UnderscoreOperator.kt
queries/: highlights.scm  tags.scm
scripts/: evaluate-jetbrains.sh  evaluation-results.json  generate-corpus.sh
src/: grammar.json  node-types.json  scanner.c
test/corpus/: annotations.txt  assignment.txt  classes.txt  comments.txt  destructuring.txt  expressions.txt  functions.txt  imports.txt  literals.txt  newlines.txt  objects.txt  soft_keywords.txt  source-files.txt  statements.txt  types.txt
test/corpus/jetbrains/: AnonymousInitializer.txt  BabySteps.txt  BlockCommentAtBeginningOfFile1.txt  BlockCommentAtBeginningOfFile2.txt  BlockCommentAtBeginningOfFile3.txt  BlockCommentAtBeginningOfFile4.txt  ByClauses.txt  CallWithManyClosures.txt  CommentsBindingInLambda.txt  CommentsBindingInStatementBlock.txt  DocCommentAfterFileAnnotations.txt  DocCommentForFirstDeclaration.txt  DocCommentOnPackageDirectiveLine.txt  DocCommentsBinding.txt  DuplicateAccessor.txt  DynamicReceiver.txt  EOLsInComments.txt  EOLsOnRollback.txt  EmptyFile.txt  EnumCommas.txt  EnumEntrySemicolonInlineMember.txt  EnumEntrySemicolonMember.txt  EnumIn.txt  EnumInline.txt  EnumInlinePublic.txt  EnumMissingName.txt  EnumShortCommas.txt  EnumShortWithOverload.txt  Enums.txt  ExtensionsWithQNReceiver.txt  FloatingPointLiteral.txt  FunctionLiterals.txt  HangOnLonelyModifier.txt  IfWithPropery.txt  ImportSoftKW.txt  Imports.txt  Inner.txt  Interface.txt  (+106 more)
test/jetbrains-sexp/: AnonymousInitializer.sexp  BabySteps.sexp  BlockCommentAtBeginningOfFile3.sexp  BlockCommentAtBeginningOfFile4.sexp  ByClauses.sexp  CallWithManyClosures.sexp  CommentsBindingInLambda.sexp  CommentsBindingInStatementBlock.sexp  DocCommentAfterFileAnnotations.sexp  DocCommentForFirstDeclaration.sexp  DocCommentOnPackageDirectiveLine.sexp  DocCommentsBinding.sexp  DuplicateAccessor.sexp  DynamicReceiver.sexp  EOLsInComments.sexp  EOLsOnRollback.sexp  EmptyFile.sexp  EnumCommas.sexp  EnumEntrySemicolonInlineMember.sexp  EnumEntrySemicolonMember.sexp  EnumIn.sexp  EnumInlinePublic.sexp  EnumMissingName.sexp  EnumShortCommas.sexp  EnumShortWithOverload.sexp  Enums.sexp  ExtensionsWithQNReceiver.sexp  FloatingPointLiteral.sexp  FunctionLiterals.sexp  HangOnLonelyModifier.sexp  IfWithPropery.sexp  ImportSoftKW.sexp  Inner.sexp  Interface.sexp  LineCommentAfterFileAnnotations.sexp  LineCommentForFirstDeclaration.sexp  LineCommentsInBlock.sexp  LongPackageName.sexp  ModifierAsSelector.sexp  NamedClassObject.sexp  (+78 more)
tools/: README.md  vendor-fixtures.js  vendor-fixtures.sh  vendor-jetbrains-tests.js  vendor-jetbrains-tests.sh  vitest.config.js
tools/cross-validation/: .fixtures-version  TODO.md  comparator.js  comparator.py  comparator.test.js  excluded.txt  main.js  main.py  mapping.js  mapping.py  mapping.test.js  models.js  models.py  normalizer.js  normalizer.py  parser-psi.js  parser-psi.test.js  parser-ts.js  parser-ts.test.js  parser_psi.py  parser_ts.py  report.js  report.md  report.py  runner.js  runner.py  test_comparator.py  test_mapping.py  test_parsers.py
(+1 files in other folders)
