[package]
name = "tree-sitter-kotlin"
description = "Kotlin grammar for tree-sitter"
version = "0.3.8"
license = "MIT"
readme = "README.md"
authors = ["fwcd"]
keywords = ["incremental", "parsing", "tree-sitter", "kotlin"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/fwcd/tree-sitter-kotlin"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.21, < 0.23"

[build-dependencies]
cc = "1.0"
